--- a/LiCSAlert.yml
+++ b/LiCSAlert.yml
@@ -4,20 +4,23 @@ channels:
   - conda-forge
 
 dependencies:
-  - python=3.11                            # general
+  - python=3.11                         # general
   - matplotlib=3.7                      # swtich from 3.0.1 needed due to bug with inset axes and tight layout
   - numpy
-  - spyder                                # interactive plotting of ICASAR is designed to work with Spyder
+  - spyder                              # interactive plotting of ICASAR is designed to work with Spyder
 
   - hdbscan=0.8                         # for ICASAR
-  - scikit-image=0.21                          # for LiCSAlert
+  - scikit-image=0.21                   # for LiCSAlert
   - scikit-learn=1.3
   - h5py=3.9
 
   - simplekml=1.3
   - geopy=2.4
 
-  - astropy                               # For LiCSBAS - not always needed.
+  - pillow=9                            # only needed to write gifs 
+  - imageio=2.31                        # only needed to write gifs. 
+
+  - astropy                             # For LiCSBAS - not always needed.
   - beautifulsoup4
   - gdal
   - requests
